<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_home"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/mainFragmentDest"
            android:checked="false"

            android:title="@string/title_home"
            android:visible="true" />
    </group>
    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"

            android:title="@string/text_profile"
            android:visible="true" />
    </group>

    <group
        android:id="@+id/group_two"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_services"
            android:title="@string/title_drawer_services"
            android:visible="false" />
    </group>

    <group
        android:id="@+id/group_three"
        android:checkableBehavior="single">
        <item
            android:id="@+id/ratingsFragment"
            android:title="@string/text_ratings"
            android:visible="true" />
    </group>

    <group
        android:id="@+id/group_four"
        android:checkableBehavior="single">
        <item
            android:id="@+id/providedServicesFragment"
            android:title="@string/text_provided_services"
            android:visible="true" />
    </group>

    <group
        android:id="@+id/group_five"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contractedServicesFragment"
            android:title="@string/text_contracted_services"
            android:visible="true" />
    </group>

    <group
        android:id="@+id/group_six"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:title="@string/title_login"
            android:visible="false" />
    </group>

<!--    <group-->
<!--        android:id="@+id/group_seven"-->
<!--        android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_financial"-->
<!--            android:title="Financeiro"-->
<!--            android:visible="false" />-->
<!--    </group>-->

<!--    <group-->
<!--        android:id="@+id/group_eight"-->
<!--        android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_favorites"-->
<!--            android:title="Favoritos"-->
<!--            android:visible="false" />-->
<!--    </group>-->

<!--    <group-->
<!--        android:id="@+id/group_nine"-->
<!--        android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_contact"-->
<!--            android:title="Fale Conosco"-->
<!--            android:visible="true" />-->
<!--    </group>-->
<!--    <group-->
<!--        android:id="@+id/group_ten"-->
<!--        android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_share"-->
<!--            android:title="Compartilhar"-->
<!--            android:visible="true" />-->
<!--    </group>-->
</menu>
